@@ -23,7 +23,7 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  *
- * $Id: ld.h 2924 2013-03-17 22:53:36Z kaiwang27 $
+ * $Id: ld.h 2940 2013-05-04 22:22:10Z kaiwang27 $
  */
 
 #include "_elftc.h"
@@ -65,6 +65,7 @@ struct ld_output_data_buffer;
 struct ld_wildcard_match;
 struct ld_ehframe_cie_head;
 struct ld_ehframe_fde_head;
+struct ld_section_group;
 
 #define	LD_MAX_NESTED_GROUP	16
 
@@ -130,6 +131,7 @@ struct ld {
 	struct ld_input_section *ld_got;    /* .got section */
 	struct ld_ehframe_cie_head *ld_cie; /* ehframe CIE list */
 	struct ld_ehframe_fde_head *ld_fde; /* ehframe FDE list */
+	struct ld_section_group *ld_sg;	/* included section groups */
 	unsigned char ld_common_alloc;	/* always alloc space for common sym */
 	unsigned char ld_common_no_alloc; /* never alloc space for common sym */
 	unsigned char ld_emit_reloc;	/* emit relocations */
