@@ -23,11 +23,17 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  *
- * $Id: ld_input.h 2920 2013-02-16 07:16:27Z kaiwang27 $
+ * $Id: ld_input.h 2940 2013-05-04 22:22:10Z kaiwang27 $
  */
 
 struct ld_reloc_entry_head;
 struct ld_ehframe_fde_head;
+
+struct ld_section_group {
+	char *sg_name;
+	unsigned char sg_discard;
+	UT_hash_handle hh, hhi;
+};
 
 struct ld_input_section {
 	char *is_name;			/* section name */
@@ -56,6 +62,7 @@ struct ld_input_section {
 	struct ld_input_section *is_tis; /* relocation target */
 	struct ld_input_section *is_ris; /* relocation section */
 	struct ld_ehframe_fde_head *is_fde; /* list of FDE */
+	struct ld_section_group *is_sg;	/* section group */
 	STAILQ_ENTRY(ld_input_section) is_next; /* next section */
 	STAILQ_ENTRY(ld_input_section) is_gc_next; /* next gc search */
 	UT_hash_handle hh;		/* hash handle (internal section) */
@@ -91,6 +98,8 @@ struct ld_input {
 	size_t li_versym_sz;		/* symbol version array size */
 	int li_dso_refcnt;		/* symbol reference count (DSO) */
 	struct ld_symver_verdef_head *li_verdef; /* version definition */
+	struct ld_section_group *li_sg;	/* section groups. */
+	unsigned char li_sg_exist;	/* section group exist. */
 	STAILQ_ENTRY(ld_input) li_next;	/* next input object */
 };
 
@@ -111,4 +120,5 @@ void	ld_input_init_sections(struct ld *, struct ld_input *, Elf *);
 void	ld_input_link_objects(struct ld *);
 void	ld_input_load(struct ld *, struct ld_input *);
 void	ld_input_unload(struct ld *, struct ld_input *);
+void	ld_input_process_section_group(struct ld *, struct ld_input *, Elf *);
 uint64_t ld_input_reserve_ibuf(struct ld_input_section *, uint64_t);
