@@ -1,3 +1,7 @@
+Mon May  6 23:09:38 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Mon May  6 23:06:33 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
